name:                gurobi-ffi
version:             0.1.0.0
synopsis:            Wrapper + bindings to the C library for the Gurobi optimizer
description:         Please see README.md
homepage:            https://github.com/TRManderson/gurobi-ffi#readme
license:             BSD3
license-file:        LICENSE
author:              Tom Manderson
maintainer:          me@trm.io
copyright:           2016 Tom Manderson
category:            Numeric
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Numeric.Gurobi
                     , Numeric.Gurobi.Types
  -- build-tools:         c2hs
  default-language:    Haskell2010
  extra-libraries:     gurobi65
  build-depends:       base >= 4.7 && < 5
                     , basic-prelude
                     , transformers
                     , monads-tf

source-repository head
  type:     git
  location: https://github.com/githubuser/gurobi-ffi
