name:                gurobi
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/TRManderson/gurobi-ffi#readme
license:             BSD3
license-file:        LICENSE
author:              Tom Manderson
maintainer:          me@trm.io
copyright:           2017 Tom Manderson
category:            Mathematics,Optimisation
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

custom-setup
  setup-depends:   base >= 4.7 && < 5

library
  hs-source-dirs:      src
  exposed-modules:     Gurobi
  other-modules:       Gurobi.Internal
  build-depends:       base >= 4.7 && < 5
                     , transformers
                     , vector
  default-language:    Haskell2010
  extra-lib-dirs:      D:\gurobi702\win64\lib
  include-dirs:        D:\gurobi702\win64\include

source-repository head
  type:     git
  location: https://github.com/TRManderso/gurobi-ffi
